# pravna-informatika-projekat

./: README.md  index.html
client/: package-lock.json  package.json
presentation/: Pravna informatika prezentacija.pptx  README.md
server/: .gitignore  README.md  api_documentation.md  app.py  pyproject.toml
server/akoma-ntoso/presude/: K 1 2024.xml  K 10 2017.xml  K 103 2017.xml  K 103 2021.xml  K 111 2019.xml  K 114 2014.xml  K 127 2013.xml  K 18 2015.xml  K 28 2013.xml  K 30 2015.xml  K 35 2018.xml  K 377 2020.xml  K 6 2014.xml  K 71 2020.xml  K 8 2017.xml  K 90 2014.xml
server/akoma-ntoso/schemas/: akomantoso30.xsd
server/akoma-ntoso/zakoni/: krivicni.xml  zakon_o_sprecavanju_zloupotrebi_droga.xml
server/controllers/: case_based_reasoning_controller.py  legal_documents_controller.py  rule_based_reasoning_controller.py
server/data/: data.csv  extracted_data.csv
server/dr-device/: facts.rdf  rulebase.lrml
server/dr-device/XSL/: lrml2ruleml.xsl  r-device.xsl
server/json/: system_instruction_file.json
server/lookup/: stop_words.py  xml_shemes.py
server/repository/: CaseRepository.py
server/routes/: case_based_reasoning.py  legal_documents.py  rule_based_reasoning.py
server/schemas/: CaseBaseFactsSchema.py  JudgmentSchema.py  RuleBaseFactsSchema.py
server/services/: annoy_matching_vector_service.py  case_based_reasoning_service.py  document_parser_service.py  gpt_communication_service.py  prompt_builder_service.py  rule_based_reasoning_service.py
server/utils/: DocumentParser.py  JudgmentDataExtractor.py  document_parser.py
(+9 files in other folders)
